# saTi

./: .gitignore  FILE_STRUCTURE.md  README.md  copy_to_tmp.bat  generate-structure.bat  main.py  prompt.md  pyproject.toml  readme.txt  saTi.lnk  sati.spec
archive/: tmp.py
bak/: __init__.py  pyproject.toml  readme.txt
bak/core/: notifications.py  persistence.py  sound.py
bak/models/: __init__.py  settings.py
bak/tests/: test_alarm_model.py  test_persistence.py  test_timer_model.py
bak/ui/: alarm_popup.py
bak/ui/dialogs/: __init__.py
bak/ui/floating/: alarm_window.py  countdown.py
core/: __init__.py  config.py  logger.py  ring.py
models/: alarm.py  stopwatch.py  timer.py
scripts/: build_desktop.py
tests/: test_alarm_popup.py
tmp/: AGENTS.md  FETCH_HEAD  FILE_STRUCTURE.md  ORIG_HEAD  SOURCES.txt  __init__.py  alarm.py  alarm_edit.py  alarm_tab.py  app.py  base.py  ci.yml  config  config.py  countdown.py  data_import_export.py  entry_points.txt  icon.py  index  main  main.py  pack-32c003ed3601b10783b64f488eeec1e958c8b2ed.idx  pack-32c003ed3601b10783b64f488eeec1e958c8b2ed.rev  packed-refs  readme.txt  requires.txt  ring.py  saTiexp.json  scheduler.py  settings.py  settings_dialog.py  sound.py  stash  stopwatch_window.py  test_countdown_window.py  test_timer_model.py  test_timer_tab_controller.py  themes.py  timer_edit.py  timer_tab.py  (+4 more)
tmp/New folder/: alarm_window.py  app.py  base.py  config.py  countdown.py  dock_manager.py  icon.py  stopwatch_tab.py  (+3 more)
ui/: __init__.py  alarm_popup.py  app.py  app_meta.py  icon.py  scheduler.py  tray.py
(+13 files in other folders)
