[project]
name = "sati"
version = "0.1.0"
description = "Cross-platform alarm, countdown timer, and stopwatch desktop app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "platformdirs>=4.0",
]

[project.scripts]
sati = "main:main"

[project.optional-dependencies]
desktop = [
  "plyer>=2.1",
  "pystray>=0.19",
  "pillow>=10.0",
  "pyinstaller>=6.0",
]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
